--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,121 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* 
+@font-face {
+    font-family: ganesha;
+    src: url("/public/Theganesha-V5OB.ttf");
+} */
 
+* {
+    font-family: 'Roboto Slab';
+}
+
+nav .logo{
+    width: 80px;
+}
+nav{
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px 4%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: rgb(0,0,0);
+background: linear-gradient(180deg, rgba(0,0,0,0.6391806722689075) 20%, rgba(255,240,240,0) 100%, rgba(151,151,151,1) 100%);
+}
+
+nav ul li {
+    list-style: none;
+    display: inline-block;
+    margin-left: 30px;
+}
+nav ul li :hover{
+    text-decoration:3px solid lightgreen;
+}
+nav ul li a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 20px;
+}
+.formsc{
+    width:100%;
+    background-color: wheat ;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    padding: 5rem;
+}
+
+.form-pics {
+    width: 100%;
+}
+
+.com{
+    width: 360px;
+    background:black ;
+    box-shadow: 0 0 8px rgba(250,250,250,0.6);
+    opacity: 0.6; 
+    border-radius: 5%;
+}
+.com form{
+    width: 100%;
+    text-align: center;
+    padding: 25px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 4px;
+}
+
+form hi{
+    padding: 10px 0;
+}
+form .ip{
+    position: relative;
+}
+form input{
+    width: 100%;
+    height: 50px;
+    /* margin: 4px; */
+    border: 1px solid #5c5c5c;
+    border-radius: 3px;
+    padding: 0 15px;
+    font-size: 20px;
+}
+
+form textarea{
+    padding: 5px 15px;
+    border: 1px solid #5c5c5c;
+    border-radius: 3px;
+    font-size: 20px;
+    width: 100%px;
+    /* margin: 4px 0; */
+}
+form button{
+    /* margin-top: 5px; */
+    border: none;
+    background-color: crimson;
+    color: black;
+    padding: 10px 0;
+    width: 100%;
+    font-size: 20px;
+    font-weight: 800;
+    cursor: pointer;
+    border-radius: 3px;
+}
+form input:focus,
+form textarea:focus{
+    /* padding-left: 4px; */
+    color: crimson;
+    transition: all 0.3s ease;
+}
+form input:focus::placeholder,
+form textarea:focus::placeholder{
+    /* padding-left: 4px; */
+    color: crimson;
+    transition: all 0.3s ease;
+}
